# rlcheck

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.yaml  main.rs
src/: main.rs
tests/: test_log_rotation.sh
