[package]
name = "website-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
md5 = "0.7"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
